# exhume

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  engine.rs  error.rs  hash.rs  lib.rs  main.rs  mapfile.rs  params.rs  progress.rs  region.rs  safety.rs  state.rs  status.rs  verify.rs
src/platform/: fallback.rs  linux.rs  macos.rs  mod.rs
tests/: copy.rs  dm-readerror.sh
